# sre-project

./: Dockerfile  docker-compose.yml  pyproject.toml
alerting/: alertmanager.yml  rules.yml
app/: app.py
locust/: docker-compose.locust.yml  locustfile.py
monitoring/: prometheus.yml
