[tool.poetry]
name = "web-monitoring"
version = "0.1.0"
description = "Flask web server with monitoring"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.0.1"
werkzeug = "2.0.1"
prometheus-flask-exporter = "0.18.2"
gunicorn = "20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"